[gd_scene load_steps=16 format=2]

[ext_resource path="res://Cenas/Menu/Main.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg.png" type="Texture" id=2]
[ext_resource path="res://Elementos_Jogo/Menu base-01.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Roman SD.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Elementos_Jogo/sair.png" type="Texture" id=5]
[ext_resource path="res://Elementos_Jogo/creditos.png" type="Texture" id=6]
[ext_resource path="res://Elementos_Jogo/icon_setting.png" type="Texture" id=7]
[ext_resource path="res://Elementos_Jogo/icon_help.png" type="Texture" id=8]
[ext_resource path="res://Elementos_Jogo/popupbg.png" type="Texture" id=9]
[ext_resource path="res://Elementos_Jogo/Popup.png" type="Texture" id=10]
[ext_resource path="res://Cenas/Menu/sprite_splash.jpg" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 14
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 11
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="Animation" id=4]

resource_name = "apareceMenu"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="BG" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Fundo" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Nova Jornada" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 144.0
margin_right = 805.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Novo Jornada"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Continuar" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 235.0
margin_right = 805.0
margin_bottom = 302.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continuar"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Jornada do Heroi" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 326.0
margin_right = 805.0
margin_bottom = 393.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Jornada do Herói"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Arquétipos" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 417.0
margin_right = 805.0
margin_bottom = 484.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arquétipos"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Exit" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 471.0
margin_top = 509.0
margin_right = 539.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Creditos" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 561.0
margin_top = 509.0
margin_right = 632.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Settings" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 650.0
margin_top = 509.0
margin_right = 721.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 7 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Help" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 740.0
margin_top = 509.0
margin_right = 812.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 8 )
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="PopupExit" type="Control" parent="." index="10"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Fundo" type="Sprite" parent="PopupExit" index="0"]

texture = ExtResource( 9 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="popup" type="Sprite" parent="PopupExit" index="1"]

position = Vector2( 640, 360 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="Label" type="Label" parent="PopupExit" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 547.0
margin_top = 331.0
margin_right = 733.0
margin_bottom = 345.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Tem certeza que deseja sair?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Sair" type="Button" parent="PopupExit" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 542.0
margin_top = 385.0
margin_right = 623.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SAIR"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Cancelar" type="Button" parent="PopupExit" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 653.0
margin_top = 385.0
margin_right = 734.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancelar"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="PopupNovoJogo" type="Control" parent="." index="11"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Fundo" type="Sprite" parent="PopupNovoJogo" index="0"]

texture = ExtResource( 9 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="popup" type="Sprite" parent="PopupNovoJogo" index="1"]

position = Vector2( 640, 360 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="Label" type="Label" parent="PopupNovoJogo" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -32.0
margin_right = 151.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Tem certeza que deseja iniciar um NOVO jogo?
Seu progresso atual será perdido."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="Sim" type="Button" parent="PopupNovoJogo" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 544.0
margin_top = 385.0
margin_right = 625.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SIM"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CancelarNovo" type="Button" parent="PopupNovoJogo" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 653.0
margin_top = 385.0
margin_right = 734.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancelar"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="12"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/apareceMenu = SubResource( 4 )
blend_times = [  ]

[node name="Black" type="Sprite" parent="." index="13"]

modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 11 )
centered = false
_sections_unfolded = [ "Offset", "Visibility" ]

[connection signal="pressed" from="Nova Jornada" to="." method="_on_Nova_Jornada_pressed"]

[connection signal="pressed" from="Continuar" to="." method="_on_Continuar_pressed"]

[connection signal="pressed" from="Jornada do Heroi" to="." method="_on_Jornada_do_Heroi_pressed"]

[connection signal="pressed" from="Arquétipos" to="." method="_on_Arqutipos_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="Creditos" to="." method="_on_Creditos_pressed"]

[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]

[connection signal="pressed" from="PopupExit/Sair" to="." method="_on_Sair_pressed"]

[connection signal="pressed" from="PopupExit/Cancelar" to="." method="_on_Cancelar_pressed"]

[connection signal="pressed" from="PopupNovoJogo/Sim" to="." method="_on_Sim_pressed"]

[connection signal="pressed" from="PopupNovoJogo/CancelarNovo" to="." method="_on_CancelarNovo_pressed"]


